 - Bugfixing - Restored some input validation error logs that were removed in version 1.12.0. The logs inform the user when the `getTreatment(s)` methods are called with an invalid value as feature flag name or flag set name.

1.15.0 (May 13, 2024)
 - Added an optional settings validation parameter to let overwrite the default flag spec version, used by the JS Synchronizer.

1.14.0 (May 6, 2024)
 - Added support for targeting rules based on semantic versions (https://semver.org/).
 - Added special impression label "targeting rule type unsupported by sdk" when the matcher type is not supported by the SDK, which returns 'control' treatment.
 - Updated Split API client to include the flags spec version query parameter for the `splitChanges` and `auth` endpoints.

1.13.1 (January 10, 2024)
 - Updated client `destroy` method to release SDK key immediately and avoid unexpected warning logs when a factory is created with the same SDK key after the previous one was destroyed.

1.13.0 (January 4, 2024)
 - Removed the `getOptions` method from the `IPlatform` interface to simplify implementation. Request options can be handled within the `getFetch` method.

1.12.1 (December 12, 2023)
 - Updated PluggableStorage, for producer mode, and LocalStorage, for standalone mode, to clear the storage before initiating the synchronization process if it was previously synchronized with a different SDK key (i.e., a different environment) or different Split Filter criteria.
 - Bugfixing - Fixed an issue when tracking telemetry latencies for the new `getTreatmentsByFlagSet(s)` methods in Redis and Pluggable storages, which was causing the SDK to not track those stats.

1.12.0 (December 4, 2023)
 - Added support for Flag Sets in "consumer" and "partial consumer" modes for Pluggable and Redis storages.
 - Updated evaluation flow to log a warning when using flag sets that don't contain cached feature flags.